syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "Server.Presentation.Grpc";

package account;

service Account {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc TokenRefresh (RefreshRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message RefreshRequest {
  string refreshToken = 1;
}

message LoginResponse {
  bool isSuccess = 1;
  string accessToken = 2;
  google.protobuf.Timestamp expiration = 3;
  string refreshToken = 4;
}